11-portainer/ingressroute-portainer.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: "traefik"

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.apps.gamehost.fi`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
          scheme: http
  tls:
    secretName: tls-gamehost
